added open graph thing

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="pl">
+<html lang="pl" prefix="og: http://ogp.me/ns#">
     <head>
         <meta charset="utf-8">
         <title>"liczba", nie "ilość"</title>
@@ -19,6 +19,12 @@
                 top: -215px;
             }
         </style>
+
+        <meta property="og:title" content="&quot;liczba&quot;, nie &quot;ilość&quot;">
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="http://liczbanieilosc.pl/">
+        <meta property="og:image" content="http://liczbanieilosc.pl/liczbanieilosc.png">
+        <meta property="og:description" content="&quot;liczba&quot;, nie &quot;ilość&quot;">
     </head>
     <body>
         <div id="wrapper">
