improved SEO and added hover effect to better see the link

--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
                 left: -215px;
                 top: -215px;
             }
+
+            #content a {
+                background: #000 url(liczbanieilosc.png);
+                display: block;
+                height: 430px;
+                text-indent: -9999px;
+                -webkit-transition: all 0.1s ease-in;
+                        transition: all 0.1s ease-in;
+                width: 430px;
+            }
+
+            #content a:hover {
+                background-color: #b00000;
+            }
         </style>
 
         <meta property="og:title" content="&quot;liczba&quot;, nie &quot;ilość&quot;">
@@ -29,9 +43,7 @@
     <body>
         <div id="wrapper">
             <div id="content">
-                <a href="http://youtu.be/Gc31UQ-C6dw">
-                    <img src="liczbanieilosc.png">
-                </a>
+                <a href="http://youtu.be/Gc31UQ-C6dw">"liczba", nie "ilość"</a>
             </div>
         </div>
     </body>
